--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "implementing blockchain features",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon dev/networkNode.js",
+    "start": "nodemon --watch dev -e js dev/networkNode.js 3001",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
